Fix Java 11 compatibility: replace Stream.toList() with collect(Collectors.toList())